[package]
name = "todo_rust_react"
version = "0.1.0"
edition = "2021"

[features]
default = ["database-test"]
database-test = []

[dependencies]
axum = "0.7.5"
hyper = { version = "1.4.1", features = ["full"] }
tokio = { version = "1.39.2", features = ["full"] }
tower = "0.4.13"
mime = "0.3.16"
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.88"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
anyhow = "1.0.86"
thiserror = "1.0.63"
